flinkk8/jobmanager-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: ui
  selector:
    app: flink
    component: jobmanager
